--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.2",
     "framer-motion": "^10.18.0",
     "jotai": "^2.6.2",
+    "jotai-effect": "^0.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
