--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.18.0",
     "jotai": "^2.6.2",
     "react": "^18.2.0",
+    "react-aria-components": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "tailwind-merge": "^2.2.1",
