--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.4.2",
     "@mantine/hooks": "^7.4.2",
     "@studio-freight/react-lenis": "^0.0.43",
@@ -20,9 +21,11 @@
     "react": "^18.2.0",
     "react-aria-components": "^1.0.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-router-dom": "^6.21.3",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
