--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+
+//    "target": "ES2020",
+    "target": "ESNext",
+    "types": ["vite/client"],
 
     /* shadcn */
     "baseUrl": ".",
